--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,16 @@
         android:text="@string/scan"
         app:layout_constraintTop_toBottomOf="@id/tvStatus"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btnQrScan"
+        android:layout_marginTop="24dp"/>
+
+    <Button
+        android:id="@+id/btnQrScan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Scan QR"
+        app:layout_constraintTop_toBottomOf="@id/tvStatus"
+        app:layout_constraintStart_toEndOf="@id/btnScan"
         app:layout_constraintEnd_toStartOf="@id/btnStop"
         android:layout_marginTop="24dp"/>
 
@@ -34,7 +44,7 @@
         android:layout_height="wrap_content"
         android:text="@string/stop"
         app:layout_constraintTop_toBottomOf="@id/tvStatus"
-        app:layout_constraintStart_toEndOf="@id/btnScan"
+        app:layout_constraintStart_toEndOf="@id/btnQrScan"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="24dp"/>
 
